--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,9 @@ p,h1,a,h2,h3,h4,h5,span {
 ul {
   text-align: right !important;
 }
+
+.nav-logo {
+  height: 7rem !important;
+  padding-top: 5px !important;
+  padding-bottom: 5px !important;
+}
